# directory_of_organizations

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 4331becab735_init.py
scripts/: seed.py
src/: main.py
src/api/v1/: activity.py  building.py  organization.py
src/core/config/: settings.py
src/domain/models/: __init__.py  activity.py  building.py  organization.py  phone.py
src/domain/repositories/: __init__.py  activity.py  building.py  organization.py
src/domain/schemas/: activity.py  building.py  organization.py  phone.py
src/domain/services/: __init__.py  activity_tree.py
src/domain/use_cases/: __init__.py
src/domain/use_cases/activity/: get_nested_activities.py
src/domain/use_cases/building/: get_all.py
src/domain/use_cases/organization/: get_by_building.py  get_by_id.py  search_by_activity_tree.py  search_by_name.py  search_in_area.py
src/infrastructure/db/: session.py
src/infrastructure/db/dependencies/: __init__.py  activity.py  building.py  organization.py
src/infrastructure/db/repositories/: __init__.py  activity.py  building.py  organization.py
